--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^9.0.6",
     "angular-confirmation-popover": "^4.2.2",
     "bootstrap": "^3.4.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.3"
