--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.5",
-    "@angular/cdk": "^9.1.1",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
@@ -23,11 +23,13 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "angular-bootstrap-md": "9.0.1",
     "angular-confirmation-popover": "^4.2.2",
+    "bootstrap": "^3.4.1",
+    "chart": "^0.1.2",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
-    "bootstrap": "^3.4.1",
     "ng2-search-filter": "^0.5.1",
-    "rxjs": "~6.5.4",
+    "passport-local": "^1.0.0",
+    "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -38,7 +40,7 @@
     "@angular/language-service": "~9.0.5",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.36",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -47,7 +49,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
