--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-C:\Users\amaur\OneDrive\Documents\GitHub\Projet_Web_19\back-end\node_modules
-C:\Users\amaur\OneDrive\Documents\GitHub\Projet_Web_19\back-end\.env
-C:\Users\amaur\OneDrive\Documents\GitHub\Projet_Web_19\front-end\node_modules
+\back-end\node_modules
+\back-end\.env
+\front-end\node_modules
