--- a/front-end/firebase.json
+++ b/front-end/firebase.json
@@ -14,6 +14,36 @@
           "destination": "/index.html"
         }
       ]
+    },
+    {
+      "target": "mdb-angular-free",
+      "public": "dist/mdb-angular-free",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
+      "target": "mdb-angular-free",
+      "public": "dist/mdb-angular-free",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
